# iqptn

./: .gitignore  basics.ipynb  expectation.py  ising_dataset_generator.ipynb  ising_generator.py  mmd.py  pyproject.toml  readme.md
experiments/: training.py  training_parameters.json
experiments/entropy_sigma/: plot_sigma_entropy.py  run.sh  setup_from_data.py  training.py  training_parameters.json
experiments/n_samples/: compute_mmd.py
iqptn/: __init__.py
iqptn/distributions/: boltzman_entropy_generator.py  ising_generator.py
notebooks/: analysis.ipynb  analysis_ess.ipynb  basics.ipynb  entropy_control_distributions.ipynb  ising_dataset_generator.ipynb  training_parametrized.ipynb
test/: test_expectation.py  test_mmd.py
